@@ -261,7 +261,7 @@ class ExperimentsResourceTest {
                             .willReturn(WireMock.unauthorized().withHeader("Content-Type", "application/json")
                                     .withJsonBody(JsonUtils.readTree(
                                             new ReactServiceErrorResponse(FAKE_API_KEY_MESSAGE,
-                                                    401)))));
+                                                    HttpStatus.SC_UNAUTHORIZED)))));
         }
 
         @ParameterizedTest
@@ -284,11 +284,11 @@ class ExperimentsResourceTest {
                     .get()) {
 
                 if (success) {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(200);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_OK);
                     var actualEntity = actualResponse.readEntity(Experiment.class);
                     assertThat(actualEntity.id()).isEqualTo(expectedExperiment.id());
                 } else {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(401);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_UNAUTHORIZED);
                     assertThat(actualResponse.readEntity(ErrorMessage.class)).isEqualTo(errorMessage);
                 }
             }
@@ -311,9 +311,9 @@ class ExperimentsResourceTest {
                     .post(Entity.json(expectedExperiment))) {
 
                 if (success) {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(201);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_CREATED);
                 } else {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(401);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_UNAUTHORIZED);
                     assertThat(actualResponse.readEntity(ErrorMessage.class)).isEqualTo(errorMessage);
                 }
             }
@@ -345,11 +345,11 @@ class ExperimentsResourceTest {
                     .get()) {
 
                 if (success) {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(200);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_OK);
                     var actualEntity = actualResponse.readEntity(ExperimentPage.class);
                     assertThat(actualEntity.content()).hasSize(1);
                 } else {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(401);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_UNAUTHORIZED);
                     assertThat(actualResponse.readEntity(ErrorMessage.class)).isEqualTo(errorMessage);
                 }
             }
@@ -379,10 +379,10 @@ class ExperimentsResourceTest {
                     .post(Entity.json(deleteRequest))) {
 
                 if (success) {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(204);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_NO_CONTENT);
                     assertThat(actualResponse.hasEntity()).isFalse();
                 } else {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(401);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_UNAUTHORIZED);
                     assertThat(actualResponse.readEntity(ErrorMessage.class)).isEqualTo(errorMessage);
                 }
             }
@@ -413,10 +413,10 @@ class ExperimentsResourceTest {
                     .post(Entity.json(deleteRequest))) {
 
                 if (success) {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(204);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_NO_CONTENT);
                     assertThat(actualResponse.hasEntity()).isFalse();
                 } else {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(401);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_UNAUTHORIZED);
                     assertThat(actualResponse.readEntity(ErrorMessage.class)).isEqualTo(errorMessage);
                 }
             }
@@ -440,10 +440,10 @@ class ExperimentsResourceTest {
                     .post(Entity.json(request))) {
 
                 if (success) {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(204);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_NO_CONTENT);
                     assertThat(actualResponse.hasEntity()).isFalse();
                 } else {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(401);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_UNAUTHORIZED);
                     assertThat(actualResponse.readEntity(ErrorMessage.class)).isEqualTo(errorMessage);
                 }
             }
@@ -471,12 +471,12 @@ class ExperimentsResourceTest {
                     .get()) {
 
                 if (success) {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(200);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_OK);
 
                     var actualEntity = actualResponse.readEntity(ExperimentItem.class);
                     assertThat(actualEntity.id()).isEqualTo(id);
                 } else {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(401);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_UNAUTHORIZED);
                     assertThat(actualResponse.readEntity(ErrorMessage.class)).isEqualTo(errorMessage);
                 }
             }
@@ -512,7 +512,7 @@ class ExperimentsResourceTest {
                             .willReturn(WireMock.unauthorized().withHeader("Content-Type", "application/json")
                                     .withJsonBody(JsonUtils.readTree(
                                             new ReactServiceErrorResponse(FAKE_API_KEY_MESSAGE,
-                                                    401)))));
+                                                    HttpStatus.SC_UNAUTHORIZED)))));
         }
 
         @ParameterizedTest
@@ -532,9 +532,9 @@ class ExperimentsResourceTest {
                     .get()) {
 
                 if (success) {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(200);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_OK);
                 } else {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(401);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_UNAUTHORIZED);
                     assertThat(actualResponse.readEntity(ErrorMessage.class)).isEqualTo(UNAUTHORIZED_RESPONSE);
                 }
             }
@@ -555,9 +555,9 @@ class ExperimentsResourceTest {
                     .post(Entity.json(expectedExperiment))) {
 
                 if (success) {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(201);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_CREATED);
                 } else {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(401);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_UNAUTHORIZED);
                     assertThat(actualResponse.readEntity(ErrorMessage.class)).isEqualTo(UNAUTHORIZED_RESPONSE);
                 }
             }
@@ -592,11 +592,11 @@ class ExperimentsResourceTest {
                     .get()) {
 
                 if (success) {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(200);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_OK);
                     var actualEntity = actualResponse.readEntity(ExperimentPage.class);
                     assertThat(actualEntity.content()).hasSize(1);
                 } else {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(401);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_UNAUTHORIZED);
                     assertThat(actualResponse.readEntity(ErrorMessage.class)).isEqualTo(UNAUTHORIZED_RESPONSE);
                 }
             }
@@ -625,10 +625,10 @@ class ExperimentsResourceTest {
                     .post(Entity.json(deleteRequest))) {
 
                 if (success) {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(204);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_NO_CONTENT);
                     assertThat(actualResponse.hasEntity()).isFalse();
                 } else {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(401);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_UNAUTHORIZED);
                     assertThat(actualResponse.readEntity(ErrorMessage.class)).isEqualTo(UNAUTHORIZED_RESPONSE);
                 }
             }
@@ -656,10 +656,10 @@ class ExperimentsResourceTest {
                     .post(Entity.json(deleteRequest))) {
 
                 if (success) {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(204);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_NO_CONTENT);
                     assertThat(actualResponse.hasEntity()).isFalse();
                 } else {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(401);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_UNAUTHORIZED);
                     assertThat(actualResponse.readEntity(ErrorMessage.class)).isEqualTo(UNAUTHORIZED_RESPONSE);
                 }
             }
@@ -679,10 +679,10 @@ class ExperimentsResourceTest {
                     .post(Entity.json(request))) {
 
                 if (success) {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(204);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_NO_CONTENT);
                     assertThat(actualResponse.hasEntity()).isFalse();
                 } else {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(401);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_UNAUTHORIZED);
                     assertThat(actualResponse.readEntity(ErrorMessage.class)).isEqualTo(UNAUTHORIZED_RESPONSE);
                 }
             }
@@ -711,11 +711,11 @@ class ExperimentsResourceTest {
                     .get()) {
 
                 if (success) {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(200);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_OK);
                     var actualEntity = actualResponse.readEntity(ExperimentItem.class);
                     assertThat(actualEntity.id()).isEqualTo(expectedExperiment.id());
                 } else {
-                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(401);
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_UNAUTHORIZED);
                     assertThat(actualResponse.readEntity(ErrorMessage.class)).isEqualTo(UNAUTHORIZED_RESPONSE);
                 }
             }
@@ -747,7 +747,7 @@ class ExperimentsResourceTest {
 
             mockTargetWorkspace(apiKey, workspaceName, workspaceId);
 
-            var datasetName = RandomStringUtils.randomAlphanumeric(10);
+            var datasetName = RandomStringUtils.secure().nextAlphanumeric(10);
             var experiments = PodamFactoryUtils.manufacturePojoList(podamFactory, Experiment.class)
                     .stream()
                     .map(experiment -> experimentResourceClient.createPartialExperiment()
@@ -776,10 +776,10 @@ class ExperimentsResourceTest {
         }
 
         Stream<Arguments> findByName() {
-            var exactName = RandomStringUtils.randomAlphanumeric(10);
-            var exactNameIgnoreCase = RandomStringUtils.randomAlphanumeric(10);
-            var partialName = RandomStringUtils.randomAlphanumeric(10);
-            var partialNameIgnoreCase = RandomStringUtils.randomAlphanumeric(10);
+            var exactName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var exactNameIgnoreCase = RandomStringUtils.secure().nextAlphanumeric(10);
+            var partialName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var partialNameIgnoreCase = RandomStringUtils.secure().nextAlphanumeric(10);
             return Stream.of(
                     arguments(exactName, exactName),
                     arguments(exactNameIgnoreCase, exactNameIgnoreCase.toLowerCase()),
@@ -831,8 +831,8 @@ class ExperimentsResourceTest {
 
             mockTargetWorkspace(apiKey, workspaceName, workspaceId);
 
-            var datasetName = RandomStringUtils.randomAlphanumeric(10);
-            var name = RandomStringUtils.randomAlphanumeric(10);
+            var datasetName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var name = RandomStringUtils.secure().nextAlphanumeric(10);
 
             var experiments = PodamFactoryUtils.manufacturePojoList(podamFactory, Experiment.class)
                     .stream()
@@ -889,7 +889,7 @@ class ExperimentsResourceTest {
                 var actualPage = actualResponse.readEntity(ExperimentPage.class);
                 var actualExperiments = actualPage.content();
 
-                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(200);
+                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_OK);
 
                 assertThat(actualPage.page()).isEqualTo(page);
                 assertThat(actualPage.size()).isEqualTo(pageSize);
@@ -966,7 +966,7 @@ class ExperimentsResourceTest {
 
             createScoreAndAssert(feedbackScoreBatch, apiKey, workspaceName);
 
-            int totalNumberOfScores = traceIdToScoresMap.values().size();
+            int totalNumberOfScores = traceIdToScoresMap.size();
             int totalNumberOfScoresPerTrace = totalNumberOfScores / traces.size(); // This will be 3 if traces.size() == 5
 
             var experimentItems = IntStream.range(0, totalNumberOfScores)
@@ -997,8 +997,8 @@ class ExperimentsResourceTest {
 
             // Add comments to trace
             List<Comment> comments = IntStream.range(0, 5)
-                    .mapToObj(
-                            i -> traceResourceClient.generateAndCreateComment(trace1.id(), apiKey, workspaceName, 201))
+                    .mapToObj(i -> traceResourceClient.generateAndCreateComment(
+                            trace1.id(), apiKey, workspaceName, HttpStatus.SC_CREATED))
                     .toList();
 
             Set<UUID> expectedExperimentIdsWithComments = getExpectedExperimentIdsWithComments(experiments,
@@ -1015,7 +1015,7 @@ class ExperimentsResourceTest {
                     .header(WORKSPACE_HEADER, workspaceName)
                     .get()) {
 
-                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(200);
+                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_OK);
                 var actualPage = actualResponse.readEntity(ExperimentPage.class);
                 var actualExperiments = actualPage.content();
 
@@ -1106,7 +1106,7 @@ class ExperimentsResourceTest {
 
             createScoreAndAssert(feedbackScoreBatch, apiKey, workspaceName);
 
-            int totalNumberOfScores = traceIdToScoresMap.values().size();
+            int totalNumberOfScores = traceIdToScoresMap.size();
 
             var experimentItems = IntStream.range(0, totalNumberOfScores)
                     .mapToObj(i -> podamFactory.manufacturePojo(ExperimentItem.class).toBuilder()
@@ -1144,7 +1144,7 @@ class ExperimentsResourceTest {
                     .header(WORKSPACE_HEADER, workspaceName)
                     .get()) {
 
-                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(200);
+                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_OK);
                 var actualPage = actualResponse.readEntity(ExperimentPage.class);
                 var actualExperiments = actualPage.content();
 
@@ -1362,14 +1362,14 @@ class ExperimentsResourceTest {
 
             createScoreAndAssert(feedbackScoreBatch, apiKey, workspaceName);
 
-            int totalNumberOfScores = traceIdToScoresMap.values().size();
+            int totalNumberOfScores = traceIdToScoresMap.size();
 
             var experimentItems = IntStream.range(0, totalNumberOfScores)
                     .mapToObj(i -> podamFactory.manufacturePojo(ExperimentItem.class).toBuilder()
                             .experimentId(expectedExperiment.id())
-                            .traceId(traces.get(0).id())
+                            .traceId(traces.getFirst().id())
                             .feedbackScores(
-                                    traceIdToScoresMap.get(traces.get(0).id()).stream()
+                                    traceIdToScoresMap.get(traces.getFirst().id()).stream()
                                             .map(FeedbackScoreMapper.INSTANCE::toFeedbackScore)
                                             .toList())
                             .build())
@@ -1516,7 +1516,7 @@ class ExperimentsResourceTest {
                 .header(HttpHeaders.AUTHORIZATION, apiKey)
                 .header(WORKSPACE_HEADER, workspaceName)
                 .delete()) {
-            assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(204);
+            assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_NO_CONTENT);
         }
     }
 
@@ -1589,7 +1589,7 @@ class ExperimentsResourceTest {
             var actualPage = actualResponse.readEntity(ExperimentPage.class);
             var actualExperiments = actualPage.content();
 
-            assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(200);
+            assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_OK);
 
             assertThat(actualPage.page()).isEqualTo(page);
             assertThat(actualPage.size()).isEqualTo(expectedExperiments.size());
@@ -1636,7 +1636,7 @@ class ExperimentsResourceTest {
                 .header(WORKSPACE_HEADER, workspaceName)
                 .put(Entity.json(feedbackScoreBatch))) {
 
-            assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(204);
+            assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_NO_CONTENT);
             assertThat(actualResponse.hasEntity()).isFalse();
         }
     }
@@ -1758,7 +1758,7 @@ class ExperimentsResourceTest {
                     .header(WORKSPACE_HEADER, TEST_WORKSPACE)
                     .post(Entity.json(new Identifier(expectedExperiment.name())))) {
 
-                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(200);
+                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_OK);
                 var actualExperiment = actualResponse.readEntity(Experiment.class);
                 assertThat(actualExperiment.id()).isEqualTo(expectedExperiment.id());
 
@@ -1772,7 +1772,8 @@ class ExperimentsResourceTest {
         @Test
         void getByNameNotFound() {
             String name = UUID.randomUUID().toString();
-            var expectedError = new ErrorMessage(404, "Not found experiment with name '%s'".formatted(name));
+            var expectedError = new ErrorMessage(HttpStatus.SC_NOT_FOUND,
+                    "Not found experiment with name '%s'".formatted(name));
             try (var actualResponse = client.target(getExperimentsPath())
                     .path("retrieve")
                     .request()
@@ -1780,7 +1781,7 @@ class ExperimentsResourceTest {
                     .header(WORKSPACE_HEADER, TEST_WORKSPACE)
                     .post(Entity.json(new Identifier(name)))) {
 
-                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(404);
+                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_NOT_FOUND);
 
                 var actualError = actualResponse.readEntity(ErrorMessage.class);
 
@@ -1831,7 +1832,7 @@ class ExperimentsResourceTest {
             // Add comments to trace
             List<Comment> expectedComments = IntStream.range(0, 5)
                     .mapToObj(i -> traceResourceClient.generateAndCreateComment(trace1.id(), API_KEY, TEST_WORKSPACE,
-                            201))
+                            HttpStatus.SC_CREATED))
                     .toList();
 
             int totalNumberOfScores = 15;
@@ -1869,7 +1870,7 @@ class ExperimentsResourceTest {
         @Test
         void createExperimentWithPromptVersionLink() {
 
-            String promptName = RandomStringUtils.randomAlphanumeric(10);
+            String promptName = RandomStringUtils.secure().nextAlphanumeric(10);
             Prompt prompt = Prompt.builder()
                     .name(promptName)
                     .build();
@@ -1904,25 +1905,21 @@ class ExperimentsResourceTest {
         }
 
         @Test
-        void createConflict() {
-            var experiment = generateExperiment();
+        void createWithSameIdIsIdempotent() {
+            var expectedExperiment = generateExperiment();
+            createAndAssert(expectedExperiment, API_KEY, TEST_WORKSPACE);
 
-            var expectedError = new ErrorMessage(
-                    409, "Already exists experiment with id '%s'".formatted(experiment.id()));
-            createAndAssert(experiment, API_KEY, TEST_WORKSPACE);
+            var unexpectedExperiment = generateExperiment().toBuilder().id(expectedExperiment.id()).build();
+            var actualId = experimentResourceClient.create(unexpectedExperiment, API_KEY, TEST_WORKSPACE);
 
-            try (var actualResponse = client.target(getExperimentsPath())
-                    .request()
-                    .header(HttpHeaders.AUTHORIZATION, API_KEY)
-                    .header(WORKSPACE_HEADER, TEST_WORKSPACE)
-                    .post(Entity.json(experiment))) {
-
-                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(409);
-
-                var actualError = actualResponse.readEntity(ErrorMessage.class);
-
-                assertThat(actualError).isEqualTo(expectedError);
-            }
+            // The event isn't posted when the experiment already exists.
+            Mockito.verifyNoMoreInteractions(defaultEventBus);
+            assertThat(actualId).isEqualTo(expectedExperiment.id());
+            var actualExperiment = getAndAssert(expectedExperiment.id(), expectedExperiment, TEST_WORKSPACE, API_KEY);
+            assertThat(actualExperiment)
+                    .usingRecursiveComparison()
+                    .ignoringFields(EXPERIMENT_IGNORED_FIELDS)
+                    .isNotEqualTo(unexpectedExperiment);
         }
 
         @Test
@@ -1960,7 +1957,7 @@ class ExperimentsResourceTest {
                     .header(WORKSPACE_HEADER, TEST_WORKSPACE)
                     .post(Entity.json(experiment))) {
 
-                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(400);
+                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_BAD_REQUEST);
 
                 var actualError = actualResponse.readEntity(com.comet.opik.api.error.ErrorMessage.class);
 
@@ -1971,7 +1968,8 @@ class ExperimentsResourceTest {
         @Test
         void getNotFound() {
             UUID id = GENERATOR.generate();
-            var expectedError = new ErrorMessage(404, "Not found experiment with id '%s'".formatted(id));
+            var expectedError = new ErrorMessage(HttpStatus.SC_NOT_FOUND,
+                    "Not found experiment with id '%s'".formatted(id));
             try (var actualResponse = client.target(getExperimentsPath())
                     .path(id.toString())
                     .request()
@@ -1979,7 +1977,7 @@ class ExperimentsResourceTest {
                     .header(WORKSPACE_HEADER, TEST_WORKSPACE)
                     .get()) {
 
-                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(404);
+                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_NOT_FOUND);
 
                 var actualError = actualResponse.readEntity(ErrorMessage.class);
 
@@ -2046,7 +2044,7 @@ class ExperimentsResourceTest {
 
             createScoreAndAssert(feedbackScoreBatch, apiKey, workspaceName);
 
-            int totalNumberOfScores = traceIdToScoresMap.values().size();
+            int totalNumberOfScores = traceIdToScoresMap.size();
 
             var experimentItems = IntStream.range(0, totalNumberOfScores)
                     .mapToObj(i -> podamFactory.manufacturePojo(ExperimentItem.class).toBuilder()
@@ -2206,7 +2204,7 @@ class ExperimentsResourceTest {
                 .header(WORKSPACE_HEADER, workspaceName)
                 .post(Entity.json(trace))) {
 
-            assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(201);
+            assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_CREATED);
             assertThat(actualResponse.hasEntity()).isFalse();
 
             var actualHeaderString = actualResponse.getHeaderString("Location");
@@ -2216,14 +2214,13 @@ class ExperimentsResourceTest {
 
     private synchronized UUID createAndAssert(Experiment expectedExperiment, String apiKey, String workspaceName) {
         Mockito.reset(defaultEventBus);
-
         try (var actualResponse = client.target(getExperimentsPath())
                 .request()
                 .header(HttpHeaders.AUTHORIZATION, apiKey)
                 .header(WORKSPACE_HEADER, workspaceName)
                 .post(Entity.json(expectedExperiment))) {
 
-            assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(201);
+            assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_CREATED);
 
             var actualId = TestUtils.getIdFromLocation(actualResponse.getLocation());
 
@@ -2256,7 +2253,7 @@ class ExperimentsResourceTest {
                 .header(WORKSPACE_HEADER, workspaceName)
                 .get()) {
 
-            if (actualResponse.getStatusInfo().getStatusCode() == 404) {
+            if (actualResponse.getStatusInfo().getStatusCode() == HttpStatus.SC_NOT_FOUND) {
                 return null;
             }
 
@@ -2274,7 +2271,7 @@ class ExperimentsResourceTest {
 
             var actualExperiment = actualResponse.readEntity(Experiment.class);
 
-            assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(200);
+            assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_OK);
 
             assertThat(actualExperiment)
                     .usingRecursiveComparison()
@@ -2361,7 +2358,7 @@ class ExperimentsResourceTest {
                     .header(WORKSPACE_HEADER, TEST_WORKSPACE)
                     .post(Entity.json(deleteRequest))) {
 
-                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(204);
+                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_NO_CONTENT);
                 assertThat(actualResponse.hasEntity()).isFalse();
             }
 
@@ -2391,7 +2388,7 @@ class ExperimentsResourceTest {
                     .header(WORKSPACE_HEADER, workspaceName)
                     .post(Entity.json(new ExperimentsDelete(ids)))) {
 
-                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(204);
+                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_NO_CONTENT);
 
                 if (datasetIds.isEmpty()) {
 
@@ -2414,7 +2411,7 @@ class ExperimentsResourceTest {
                     .header(WORKSPACE_HEADER, workspaceName)
                     .get()) {
 
-                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(404);
+                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_NOT_FOUND);
             }
         }
 
@@ -2471,7 +2468,7 @@ class ExperimentsResourceTest {
         @Test
         void streamByExperimentName() {
             var apiKey = UUID.randomUUID().toString();
-            var workspaceName = RandomStringUtils.randomAlphanumeric(10);
+            var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
             var workspaceId = UUID.randomUUID().toString();
             mockTargetWorkspace(apiKey, workspaceName, workspaceId);
 
@@ -2495,7 +2492,7 @@ class ExperimentsResourceTest {
             // Add comments to trace
             List<Comment> expectedComments = IntStream.range(0, 5)
                     .mapToObj(i -> traceResourceClient.generateAndCreateComment(traceWithScores2.getKey().id(), apiKey,
-                            workspaceName, 201))
+                            workspaceName, HttpStatus.SC_CREATED))
                     .toList();
 
             var experiment1 = generateExperiment();
@@ -2580,7 +2577,7 @@ class ExperimentsResourceTest {
         @Test
         void streamByExperimentNameWithNoItems() {
             var apiKey = UUID.randomUUID().toString();
-            var workspaceName = RandomStringUtils.randomAlphanumeric(10);
+            var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
             var workspaceId = UUID.randomUUID().toString();
             mockTargetWorkspace(apiKey, workspaceName, workspaceId);
 
@@ -2597,12 +2594,12 @@ class ExperimentsResourceTest {
         @Test
         void streamByExperimentNameWithoutExperiments() {
             var apiKey = UUID.randomUUID().toString();
-            var workspaceName = RandomStringUtils.randomAlphanumeric(10);
+            var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
             var workspaceId = UUID.randomUUID().toString();
             mockTargetWorkspace(apiKey, workspaceName, workspaceId);
 
             var streamRequest = ExperimentItemStreamRequest.builder()
-                    .experimentName(RandomStringUtils.randomAlphanumeric(10))
+                    .experimentName(RandomStringUtils.secure().nextAlphanumeric(10))
                     .build();
             var expectedExperimentItems = List.<ExperimentItem>of();
             var unexpectedExperimentItems1 = List.<ExperimentItem>of();
@@ -2663,7 +2660,7 @@ class ExperimentsResourceTest {
                     .header(WORKSPACE_HEADER, workspaceName)
                     .post(Entity.json(request))) {
 
-                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(409);
+                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_CONFLICT);
                 assertThat(actualResponse.hasEntity()).isTrue();
                 assertThat(actualResponse.readEntity(ErrorMessage.class).getMessage())
                         .isEqualTo("Upserting experiment item with 'dataset_item_id' not belonging to the workspace");
@@ -2696,7 +2693,7 @@ class ExperimentsResourceTest {
                     .header(WORKSPACE_HEADER, workspaceName)
                     .post(Entity.json(request))) {
 
-                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(409);
+                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_CONFLICT);
                 assertThat(actualResponse.hasEntity()).isTrue();
                 assertThat(actualResponse.readEntity(ErrorMessage.class).getMessage())
                         .isEqualTo("Upserting experiment item with 'experiment_id' not belonging to the workspace");
@@ -2718,7 +2715,7 @@ class ExperimentsResourceTest {
                     .header(WORKSPACE_HEADER, workspaceName)
                     .put(Entity.json(batch))) {
 
-                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(204);
+                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_NO_CONTENT);
             }
 
             return item.id();
@@ -2762,7 +2759,7 @@ class ExperimentsResourceTest {
                     .header(WORKSPACE_HEADER, TEST_WORKSPACE)
                     .post(Entity.json(request))) {
 
-                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(400);
+                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_BAD_REQUEST);
 
                 var actualError = actualResponse.readEntity(com.comet.opik.api.error.ErrorMessage.class);
 
@@ -2899,7 +2896,7 @@ class ExperimentsResourceTest {
                 .header(WORKSPACE_HEADER, workspaceName)
                 .get()) {
 
-            assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(200);
+            assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_OK);
 
             var actualExperimentItem = actualResponse.readEntity(ExperimentItem.class);
 
@@ -2958,7 +2955,8 @@ class ExperimentsResourceTest {
     }
 
     private void getAndAssertNotFound(UUID id, String apiKey, String workspaceName) {
-        var expectedError = new ErrorMessage(404, "Not found experiment item with id '%s'".formatted(id));
+        var expectedError = new ErrorMessage(HttpStatus.SC_NOT_FOUND,
+                "Not found experiment item with id '%s'".formatted(id));
         try (var actualResponse = client.target(getExperimentItemsPath())
                 .path(id.toString())
                 .request()
@@ -2966,7 +2964,7 @@ class ExperimentsResourceTest {
                 .header(WORKSPACE_HEADER, workspaceName)
                 .get()) {
 
-            assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(404);
+            assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_NOT_FOUND);
 
             var actualError = actualResponse.readEntity(ErrorMessage.class);
 
@@ -2988,7 +2986,7 @@ class ExperimentsResourceTest {
                 .header(WORKSPACE_HEADER, workspaceName)
                 .post(Entity.json(request))) {
 
-            assertThat(actualResponse.getStatus()).isEqualTo(200);
+            assertThat(actualResponse.getStatus()).isEqualTo(HttpStatus.SC_OK);
 
             var actualExperimentItems = getStreamedItems(actualResponse);
 
